# oop-project

./: BankruptcyManager.cpp  BankruptcyManager.h  CMakeLists.txt  CardManager.cpp  CardManager.h  CellTypes.cpp  CellTypes.h  Dice.cpp  Dice.h  GameRules.cpp  GameRules.h  Map.cpp  Map.h  Player.cpp  Player.h  README.md  UI.cpp  UI.h  cell.cpp  cell.h  main.cpp  monopoly.html
